fixing some layout issues

--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -80,5 +80,5 @@
     line-height: normal;
     letter-spacing: -0.08px;
     display: flex;
-    margin-right: 28px;
+    margin-right: 30px;
 }
